--- a/StonksTracker/Resources/Info.plist
+++ b/StonksTracker/Resources/Info.plist
@@ -18,17 +18,19 @@
 	<string>$(MARKETING_VERSION)</string>
 	<key>CFBundleVersion</key>
 	<string>$(CURRENT_PROJECT_VERSION)</string>
+	<key>LSApplicationCategoryType</key>
+	<string>public.app-category.finance</string>
 	<key>LSMinimumSystemVersion</key>
 	<string>$(MACOSX_DEPLOYMENT_TARGET)</string>
 	<key>LSUIElement</key>
 	<true/>
 	<key>NSPrincipalClass</key>
 	<string>StonksTracker.Application</string>
+	<key>SUEnableInstallerLauncherService</key>
+	<true/>
 	<key>SUFeedURL</key>
 	<string>https://applications.tr1ckyf0x.com/StonksTracker/appcast.xml</string>
 	<key>SUPublicEDKey</key>
 	<string>U0ICSlg5vAtmPoYLZgwMSnWJ1C1oFv07EUx8UXB9Qsk=</string>
-	<key>SUEnableInstallerLauncherService</key>
-	<true/>
 </dict>
 </plist>
