--- a/StonksTracker/Resources/Info.plist
+++ b/StonksTracker/Resources/Info.plist
@@ -32,5 +32,7 @@
 	<string>https://applications.tr1ckyf0x.com/StonksTracker/appcast.xml</string>
 	<key>SUPublicEDKey</key>
 	<string>U0ICSlg5vAtmPoYLZgwMSnWJ1C1oFv07EUx8UXB9Qsk=</string>
+	<key>GOOGLE_ANALYTICS_REGISTRATION_WITH_AD_NETWORK_ENABLED</key>
+	<false/>
 </dict>
 </plist>
