--- a/project.yml
+++ b/project.yml
@@ -64,6 +64,11 @@ targets:
       base:
         PRODUCT_BUNDLE_IDENTIFIER: com.tr1ckyf0x.stonks.tracker
         CODE_SIGN_ENTITLEMENTS: "StonksTracker/Resources/StonksTracker.entitlements"
+    preBuildScripts:
+    - name: "Swiftlint"
+      basedOnDependencyAnalysis: false
+      script: |
+              .bin/swiftlint
     postBuildScripts:
       - name: "Crashlytics"
         basedOnDependencyAnalysis: false
