--- a/project.yml
+++ b/project.yml
@@ -14,7 +14,7 @@ settings:
 
 options:
   deploymentTarget:
-    macOS: 12.0
+    macOS: 13.0
 
 attributes:
   ORGANIZATIONNAME: "Vladislav Lisianskii"
@@ -28,6 +28,10 @@ packages:
   Firebase:
     url: https://github.com/firebase/firebase-ios-sdk
     from: 10.21.0
+
+  Sparkle:
+    url: https://github.com/sparkle-project/Sparkle
+    from: 2.5.2
 
   # Local packages
 
@@ -47,6 +51,7 @@ targets:
           - "swiftgen.yml"
           - "**/*.secret"
     dependencies:
+      - package: Sparkle
       - package: Swinject
       - package: Firebase
         products:
@@ -55,7 +60,6 @@ targets:
       - package: Modules
         products:
           - AnalyticsService
-          - StatusItemController
           - MenuBar
           - CoinCapPriceService
           - UpdateService
