Removed modular architecture. Updated dependencies

--- a/project.yml
+++ b/project.yml
@@ -7,6 +7,7 @@ settings:
     CLANG_ANALYZER_LOCALIZABILITY_EMPTY_CONTEXT: YES
     CLANG_WARN_QUOTED_INCLUDE_IN_FRAMEWORK_HEADER: YES
     ENABLE_HARDENED_RUNTIME: YES
+    SWIFT_EMIT_LOC_STRINGS: YES
     DEVELOPMENT_TEAM: SGM5527A99
     CODE_SIGN_STYLE: Automatic
     MARKETING_VERSION: 1.2.0
@@ -20,26 +21,18 @@ attributes:
   ORGANIZATIONNAME: "Vladislav Lisianskii"
 
 packages:
-
   Swinject:
     url: https://github.com/Swinject/Swinject
-    from: 2.9.1
-
+    exactVersion: 2.9.1
   Firebase:
     url: https://github.com/firebase/firebase-ios-sdk
-    from: 11.11.0
-
+    exactVersion: 11.11.0
   Sparkle:
     url: https://github.com/sparkle-project/Sparkle
-    from: 2.7.0
-
-  # Local packages
-
-  ## Core
-  Modules:
-    path: Packages/Modules
-    group: Local
-
+    exactVersion: 2.7.0
+  CocoaLumberjack:
+    url: https://github.com/CocoaLumberjack/CocoaLumberjack
+    exactVersion: 3.8.5
 
 targets:
   StonksTracker:
@@ -57,13 +50,9 @@ targets:
         products:
           - FirebaseAnalytics
           - FirebaseCrashlytics
-      - package: Modules
+      - package: CocoaLumberjack
         products:
-          - AnalyticsService
-          - MenuBar
-          - CoinCapPriceService
-          - UpdateService
-          - Log
+          - CocoaLumberjackSwift
     settings:
       base:
         PRODUCT_BUNDLE_IDENTIFIER: com.tr1ckyf0x.stonks.tracker
